--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirecting...</title>
+    <title>Time Clock</title>
     
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png">
 
-    <!-- Redirect to the Google Script Link immediately -->
-    <meta http-equiv="refresh" content="0; URL=https://script.google.com/a/macros/humanewildlifecontrol.com/s/AKfycbwk6i4IpcKJf6dfsX8ZsxvZxhqpbdOy31mM1vQDQ0Nuh1cKcDFWh2VZE6laMIH7EIlMiA/exec">
+    <!-- Redirect to the Google Script Link after 3 seconds -->
+    <meta http-equiv="refresh" content="3; URL=https://script.google.com/a/macros/humanewildlifecontrol.com/s/AKfycbwk6i4IpcKJf6dfsX8ZsxvZxhqpbdOy31mM1vQDQ0Nuh1cKcDFWh2VZE6laMIH7EIlMiA/exec">
     
     <!-- Canonical link for SEO consistency -->
     <link rel="canonical" href="https://script.google.com/a/macros/humanewildlifecontrol.com/s/AKfycbwk6i4IpcKJf6dfsX8ZsxvZxhqpbdOy31mM1vQDQ0Nuh1cKcDFWh2VZE6laMIH7EIlMiA/exec">
@@ -41,8 +41,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Redirecting you now...</h1>
-        <p>If you are not redirected automatically in a few seconds, please 
+        <h1>Opening Time Clock...</h1>
+        <p>Please wait while we redirect you. If nothing happens after 5 seconds, please 
             <a href="https://script.google.com/a/macros/humanewildlifecontrol.com/s/AKfycbwk6i4IpcKJf6dfsX8ZsxvZxhqpbdOy31mM1vQDQ0Nuh1cKcDFWh2VZE6laMIH7EIlMiA/exec">
                 click here to continue
             </a>.
@@ -50,8 +50,10 @@
     </div>
 
     <script>
-        // JavaScript fallback redirect in case Meta Refresh is disabled
-        window.location.href = "https://script.google.com/a/macros/humanewildlifecontrol.com/s/AKfycbwk6i4IpcKJf6dfsX8ZsxvZxhqpbdOy31mM1vQDQ0Nuh1cKcDFWh2VZE6laMIH7EIlMiA/exec";
+        // JavaScript fallback redirect with a 3-second (3000ms) delay
+        setTimeout(function() {
+            window.location.href = "https://script.google.com/a/macros/humanewildlifecontrol.com/s/AKfycbwk6i4IpcKJf6dfsX8ZsxvZxhqpbdOy31mM1vQDQ0Nuh1cKcDFWh2VZE6laMIH7EIlMiA/exec";
+        }, 3000);
     </script>
 </body>
 </html>
